# 15game

./: README.md
src/: CMakeLists.txt  _input_one.cpp  _input_one.h  key_detect.cpp  key_detect.h  keys.cpp  keys.h  lib_input.h  main.cpp  move.cpp  move.h  randomizer.h  run.sh  s_input.cpp  s_input.h
src_en/: CMakeLists.txt  _input_one.cpp  _input_one.h  defines.h  fifteen.pro  fifteen.pro.user.a5379f2  key_detect.cpp  key_detect.h  keys.cpp  keys.h  lib_input.h  main.cpp  move.cpp  move.h  plan.txt  randomizer.h  readme.txt  s_input.cpp  s_input.h
